--- a/src/main/resources/templates/customer.html
+++ b/src/main/resources/templates/customer.html
@@ -66,6 +66,10 @@
             <!-- Lägg till ett dolt input-fält för att skicka kundens ID -->
             <input type="hidden" th:name="id" th:value="${customer.id}">
             <div class="form-group">
+                <label for="customerNumber">Kundnummer:</label>
+                <input type="text" class="form-control" id="customerNumber" name="customerNumber" th:value="${customer.customerNumber}" required readonly>
+            </div>
+            <div class="form-group">
                 <label for="customerName">Namn:</label>
                 <input type="text" class="form-control" id="customerName" name="customerName" th:value="${customer.customerName}" required>
             </div>
