--- a/src/main/resources/templates/customer.html
+++ b/src/main/resources/templates/customer.html
@@ -55,14 +55,14 @@
     <form action="/customer/search" method="post">
         <div class="form-group">
             <label for="email">E-post:</label>
-            <input type="text" class="form-control" id="email" name="email" placeholder="name@example.com" required>
+            <input type="email" class="form-control" id="email" name="email" placeholder="name@example.com" required>
         </div>
         <button type="submit" class="btn btn-primary">Sök</button><br><br>
     </form>
     <!-- Kundinformation eller formulär för att uppdatera kund -->
     <div th:if="${customer}">
         <h2 class="text-center">Ändra kund</h2>
-        <form action="/customer/update" method="post">
+        <form th:if="${not customerNotFound}" action="/customer/update" method="post">
             <!-- Lägg till ett dolt input-fält för att skicka kundens ID -->
             <input type="hidden" th:name="id" th:value="${customer.id}">
             <div class="form-group">
@@ -75,11 +75,11 @@
             </div>
             <div class="form-group">
                 <label for="phoneNumber">Telefon:</label>
-                <input type="text" class="form-control" id="phoneNumber" name="phoneNumber" th:value="${customer.phoneNumber}" required>
+                <input type="tel" class="form-control" id="phoneNumber" name="phoneNumber" th:value="${customer.phoneNumber}" required>
             </div>
             <div class="form-group">
                 <label for="email1">E-post:</label>
-                <input type="text" class="form-control" id="email1" name="email" th:value="${customer.email}" required>
+                <input type="email" class="form-control" id="email1" name="email" th:value="${customer.email}" required>
             </div>
             <button type="submit" class="btn btn-success">Uppdatera</button>
             <a th:href="@{/customer/delete(id=${customer.id})}" class="btn btn-danger">Ta bort</a>
