--- a/src/main/resources/templates/createUser.html
+++ b/src/main/resources/templates/createUser.html
@@ -21,7 +21,8 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBookings" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBookings" role="button"
+                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Bokningshantering
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownBookings">
@@ -31,7 +32,8 @@
                     </div>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownCustomer" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownCustomer" role="button"
+                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Kundhantering
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownCustomer">
@@ -39,17 +41,20 @@
                         <a class="dropdown-item" href="/contractCustomer">Sök avtalskund</a>
                     </div>
                 <li class="nav-item dropdown" sec:authorize="hasAnyAuthority('admin')">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownAdmin" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownAdmin" role="button"
+                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Admin
                     </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownAdmin" >
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownAdmin">
                         <a class="dropdown-item" href="/admin/templates">Alla mallar</a>
                         <a class="dropdown-item" href="/blacklist">Blacklist admin</a>
                         <a class="dropdown-item" href="/user">User admin</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown" sec:authorize="isAuthenticated()">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownUser" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" th:text="${#authentication.name}">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownUser" role="button"
+                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
+                       th:text="${#authentication.name}">
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownUser">
                         <a class="dropdown-item" href="/logout">Logga ut</a>
@@ -64,12 +69,11 @@
 </div>
 <div class="container mt-4">
 
-    <div th:unless="${user}">
+    <div th:unless="${hasFilledForm}">
 
         <h1 class="text-center mb-5 mt-5"> Skapa användare</h1>
 
-        <form action="/user/create" method="post" >
-
+        <form action="/user/create" method="post">
 
             <div class="form-group">
                 <label for="username">Användarnamn:</label>
@@ -84,27 +88,29 @@
                 <input type="checkbox" class="form-control" id="receptionist" name="receptionist">
             </div>
             <div>
-
+                <button type="submit" class="btn btn-success">Skapa</button>
+                <a href="/user" class="btn btn-danger">Avbryt</a>
             </div>
-
-            <button type="submit" class="btn btn-success">Skapa</button>
-            <a href="/user" class="btn btn-danger">Avbryt</a>
         </form>
     </div>
-    <div th:if="${user}">
-        <div class=" d-flex flex-column">
+    <div th:if="${hasFilledForm}">
 
-            <p><strong>Användarnamn:</strong> <span th:text="${user.getUsername}"></span></p>
-            <p><strong>Admin:</strong> <span th:text="${user.isAdmin() == true} ? 'Ja' : 'Nej'"></span></p>
-            <p><strong>Receptionist:</strong> <span th:text="${user.isReceptionist() == true} ? 'Ja' : 'Nej'"></span></p>
+        <div th:unless="${userAlreadyExists}">
+            <div class=" d-flex flex-column">
 
+                <p><strong>Användarnamn:</strong> <span th:text="${user.getUsername}"></span></p>
+                <p><strong>Admin:</strong> <span th:text="${user.isAdmin() == true} ? 'Ja' : 'Nej'"></span></p>
+                <p><strong>Receptionist:</strong> <span th:text="${user.isReceptionist() == true} ? 'Ja' : 'Nej'"></span></p>
+
+            </div>
+            <div class="alert alert-success text-center" role="alert" th:text="${message}"></div>
+            <a class="btn btn-primary" href="/user" role="button">Gå tillbaka</a>
         </div>
-        <div class="alert alert-success text-center" role="alert" th:text="${message}"></div>
-        <a class="btn btn-primary" href="/user" role="button">Gå tillbaka</a>
+        <div th:if="${userAlreadyExists}">
+            <div class="alert alert-warning text-center" role="alert" th:text="${message}"></div>
+            <a class="btn btn-primary" href="/user" role="button">Gå tillbaka</a>
+        </div>
 
     </div>
-
-
-
 </div>
 </body>
